--- a/src/utils/Loader/loader.css
+++ b/src/utils/Loader/loader.css
@@ -5,19 +5,20 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.664);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+  border: 8px solid #a1a1a1;
+  border-top: 8px solid #032125;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  z-index: 99999;
+  width: 80px;
+  height: 80px;
   animation: spin 2s linear infinite;
 }
 
