--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20054,3 +20054,12 @@ h6 {
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
+
+/* .ic-product i {
+  @apply text-[0.625rem];
+} */
+.ic-product-p p,
+.ic-product-p h5 {
+  @apply w-[18.5rem];
+  word-break: break-all;
+}
