fix(add):Product Page And some design changes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20063,3 +20063,6 @@ h6 {
   @apply w-[18.5rem];
   word-break: break-all;
 }
+.list-group-item.checkforactive {
+  @apply bg-light text-primary;
+}
