--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3958,7 +3958,7 @@ label {
 }
 
 .task-pending-card {
-  @apply border-s-[0.45rem] border-solid border-secondary/40;
+  @apply border-s-[0.45rem] border-solid border-primary/40;
 }
 
 .task-inprogress-card {
@@ -15478,7 +15478,7 @@ input.gridjs-input {
 }
 
 .form-select {
-  @apply block w-full py-[0.375rem] pe-[2.25rem] ps-[0.75rem] text-[1rem] font-normal leading-[1.5];
+  @apply block w-full py-[0.5rem] pe-[2.25rem] ps-[0.75rem] text-[1rem] font-normal leading-[1.9];
 }
 
 .form-select {
@@ -15486,6 +15486,7 @@ input.gridjs-input {
 }
 .form-select option {
   @apply bg-white dark:bg-bodybg py-[0.35rem] px-3 rounded-sm border border-primary/10;
+  text-transform: capitalize;
 }
 .form-select option:checked {
   @apply bg-primary/20 text-primary;
@@ -20036,4 +20037,32 @@ h6 {
 .ti-btn-icon-table img {
   @apply w-[1.8rem];
   overflow: visible;
+}
+
+.signin-new {
+  @apply flex justify-between;
+  flex-direction: column;
+}
+.over-text {
+  word-break: break-all;
+}
+
+.text-site-name {
+  @apply w-[125px];
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+/* .ic-product i {
+  @apply text-[0.625rem];
+} */
+.ic-product-p p,
+.ic-product-p h5 {
+  @apply w-[18.5rem];
+  word-break: break-all;
+}
+.list-group-item.checkforactive {
+  @apply bg-light text-primary;
 }
