--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20025,7 +20025,7 @@ h6 {
   @apply bg-primary;
 }
 .pagination {
-  @apply flex;
+  @apply flex justify-end;
 }
 .pagination .page-link {
   @apply w-[1.8rem] h-[1.8rem] bg-white border-b-defaultborder block leading-[1.8rem] text-center;
