fix(add): add site entitlement condition

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20098,3 +20098,7 @@ h6 {
 .swal-overlay--show-modal {
   pointer-events: none !important;
 }
+.swal-button:hover {
+  background-color: #032125 !important;
+  color: #fff !important;
+}
