fix(add):view site and update site

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -111,7 +111,8 @@ Background Image
 @tailwind components;
 @tailwind utilities;
 /* End Tailwind Styles */
-body, html {
+body,
+html {
   overflow: auto;
 }
 :root {
